[tool.poetry]
name = "poetry-playground"
version = "0.1.0"
description = "📚 Learning and exploring Poetry, the Python package manager"
authors = ["David Groomes <dwgroomes@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
